--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -246,6 +246,7 @@ Wingfly
 
 BugInsect:12/13
     BrianRight:铀恼婬尚 Geosprite.EarthDate:12.24 7-8:00PM
+    Innerhead transfer belittle
 </pre>
 </body>
 </html>
