--- a/AngelNetwork/analytical/asnic/ketstring.html
+++ b/AngelNetwork/analytical/asnic/ketstring.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <pre id="p">
-Z   Definting： Aolic.Orith //
-2    四则运算英语叫法 
-3    VOS 
-4        plus substract multiple divide
-5        加减乘除
-6    是否应该 SOV
-7       好似正方形的每个角
-8 12-5
-9    社会计
-10    红色砖tou
-12    成交价驾驶○司漏仇睡码捅tou
-A    铁眠涨潮
+Definting： Aolic.Orith //
+ 四则运算英语叫法 
+ VOS 
+     plus substract multiple divide
+     加减乘除
+ 是否应该 SOV
+    好似正方形的每个角
+-5
+ 社会计
+   红色砖tou
+   成交价驾驶○司漏仇睡码捅tou
+ 铁眠涨潮
 
     </pre>
     <pre id="p2" style="color:red"></pre>
