switch bug out 小 大 拍 骂

--- a/AngelNetwork/analytical/asnic/leonic.html
+++ b/AngelNetwork/analytical/asnic/leonic.html
@@ -123,7 +123,7 @@ Intelligent.Depends
        Ton:shawn
        Bot: down
     //好似边 射 推
-   //Acidental Dental
+   //Acidental Dental Truncle
     Radicals= [
         "occidental","oriental"    
         ]
