--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -244,9 +244,17 @@ Wingfly
      东中方 除了方位影响？
  4.切入点 理序 牵制 创造力 前瞻性 笨怨俗
 
-BugInsect:12/13
+BugInsect:12/31
     BrianRight:铀恼婬尚 Geosprite.EarthDate:12.24 7-8:00PM
     Innerhead transfer belittle
+loneness12/32
+    安逸的小女人 铀孩子 报社街 故都 床 面向囡Bedsourth 西南角
+    豹^定于->阴痒 三蛟?=生蒂牙割 
+    ColorAllienated
+    三角
+        别莫大 柏木D Triangle
+        川商Ship 西走借支Ring @= Iran艺廊 囡
+        旋传形白帽子 安拉波
 </pre>
 </body>
 </html>
