--- a/AngelNetwork/analytical/asnic/ketstruct.html
+++ b/AngelNetwork/analytical/asnic/ketstruct.html
@@ -133,29 +133,29 @@
      //   document.write(typeKind3);
 
 
-        // var  extacted = function (params) {
-        //    'use strict';
+         var  extent = function (params) {
+            'use strict';
 
-        //       if (null != params)
-        //           document.write("new:" + params);
+            if (null != params)
+                   document.write("new:" + params);
 
-        //    function _showName(name) {
-        //        document.writeln(name);
-        //    }
+            function _showName(name) {
+                document.writeln(name);
+            }
 
-        //    function mine(para) {
-        //        document.writeln(para);
-        //    }
+            function mine(para) {
+                document.writeln(para);
+            }
 
-        //    return {
-        //        mine: mine,
-        //        ketlina: "public properties",
+            return {
+                mine: mine,
+                ketlina: "public properties",
 
-        //        //showName(name) { //IE NOT 练习私有方法
-        //        //    _showName(name);
-        //        //}
-        //    }
-        //}
+                //showName(name) { //IE NOT 练习私有方法
+                //    _showName(name);
+                //}
+            }
+        }
 
         //var e = new extacted("hereby that is jaoasdf");
         //e.mine("mine");
