Func index Rant Switch

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -255,6 +255,9 @@ loneness12/32
         别莫大 柏木D Triangle
         川商Ship 西走借支Ring @= Iran艺廊 囡
         旋传形白帽子 安拉波
+    角捅妓甲树圆 
+    惠喉咙中薛 School Hour Rheal revelation Horus Long  
+    荷鲁斯 实间 
 </pre>
 </body>
 </html>
