--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -35,8 +35,9 @@
     bottom low middle high 面困 frame 6 plus	
 	bottom low middle high 困分化 晚吃一次 工面1
     bottom low middle high 困分化  工面3
-    bottom low middle high 
-
+    bottom low middle high  buginsect inner-danG^er 
+     bottom low middle high
+     bottom low middle high
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
