--- a/AngelNetwork/analytical/asnic/ketstring.html
+++ b/AngelNetwork/analytical/asnic/ketstring.html
@@ -7,42 +7,39 @@
 </head>
 <body>
     <pre id="p">
+CartItem Item = Items.Find(c => (c.ProductID == productID) && (c.ProductName == "ABS001"));
+CartItem
+CartItem Item 
+CartItem Item = 
+CartItem Item = Items
+CartItem Item = Items .
+CartItem Item = Items .Find
+CartItem Item = Items .Find(
+CartItem Item = Items .Find(
+CartItem Item = Items .Find(c => //两个=>
+CartItem Item = Items .Find(c => (
+CartItem Item = Items .Find(c => (c
+CartItem Item = Items .Find(c => (c.
+CartItem Item = Items .Find(c => (c.ProductID 
+CartItem Item = Items .Find(c => (c.ProductID ==  //两个==
+CartItem Item = Items .Find(c => (c.ProductID == productID
+CartItem Item = Items .Find(c => (c.ProductID == productID) //couple 1-1
+CartItem Item = Items .Find(c => (c.ProductID == productID) && //两个&&
+CartItem Item = Items .Find(c => (c.ProductID == productID) && ( //couple 1-
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName == //两个==
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName == " //couple 1-3
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName == "ABS001//couple 1-4
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName == "ABS001" //两个引号 Cyber.Branket"ABS001" 
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName == "ABS001")//couptle 1-5, 2-1
+CartItem Item = Items .Find(c => (c.ProductID == productID) && (c.ProductName == "ABS001"))//couptle 1-6, 2-2 couple 3 
 
-
-Definting： Aolic.Orith //
- 四则运算英语叫法 
- VOS 
-     plus substract multiple divide
-     加减乘除
- 是否应该 SOV
-    好似正方 形的每个角
--5
- 社会计
-   红色砖tou
-   成交 价驾驶○ 司漏仇睡 码捅tou
- 铁眠 涨潮
-    ○□□□□□□□□□□□□□□□□□△
-    □□□ word.one              □□□
-    □□□ start                        □□□
-    □□○     do something  ○□□
-    □□□end                         □□□
-    □□□ single line            □□□
-    ▽□□□□□□□□□□□□□□ □□□
+记录位置：
+行号 第一个括号 位置
+行号 第一个括号 第二个括号 位置
+行号 第三个括号开始 第一个括号 第二个括号 第三个括号结束 位置
     </pre>
-    Each Space Usual Special 
-    Axis.Side
-    Axis.ColumnIndexes.Center.Singular.Offset|Both
-    Radcial Dynamical Index Columns Rowlets
-
-    Algorithm Orith aorithm
-    Functions
-    Fequent.Switch.RequireLevel
-    Count Sum Avg Max Min
-    Algorithm:CyberKount SyberCount//好似时间复杂度 算法算了几次
-    WordRant Kant Rint Kint //可丁可卯统计
-    Stick Stack Stabled Colored
-     △▽◇○☆
-
+   
 
   <br />
     letter word
@@ -64,3 +61,21 @@ Definting： Aolic.Orith //
     </script>
 </body>
 </html>
+
+<!--
+    Each Space Usual Special 
+*三字码 索引Index展示 参照each.svg 规范 规格 否则 中东西语言不规范
+Axis.Side
+Axis.ColumnIndexes.Center.Singular.Offset|Both
+Radcial Dynamical Index Columns Rowlets
+
+Algorithm Orith aorithm
+Functions
+Fequent.Switch.RequireLevel
+
+Count Sum Avg Max Min
+Algorithm:CyberKount SyberCount//好似时间复杂度 算法算了几次
+WordRant Kant Rint Kint //可丁可卯统计
+Stick Stack Stabled Colored
+
+ -->
