--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -5,6 +5,20 @@
     <title></title>
 </head>
 <body>
+<pre>
+/1-2:神秘石猴睾丁 WhenDone
+    塞卡斯特：打忘 脑控仅仅如此 生命体形式
+    
+    三角族@=
+        希腊哲学凭空想象 <=> 莱昂形成 Leonic.ActualForm
+        外星人
+       亚特兰蒂斯 光 首先印象 地球内外 不城池自我光 失联 
+    
+    爱后分离的感觉：人 角色 类型 
+    不愿意做人\\love-make the sound so-called invisible lifeform that people can not see is panic and paranoia 
+     /^沾水踢扣 Genetical Virginal Grivitional Being Dragged Into 鬼儿自 钕耳龟
+    希铀 妓肋十戒：轮回 苦 Transcolor.Religious.BuddlistChina
 
+</pre>
 </body>
 </html>
