housely east push

--- a/AngelNetwork/analytical/asnic/leonic.html
+++ b/AngelNetwork/analytical/asnic/leonic.html
@@ -34,11 +34,12 @@ OrginedWaterly:Recognition~Mei~Beautiful:Required| Rand-Options |Not:不利
 var Leon = ["Source", "Orgin"]; //Source = Substance
 var Maticals = ["Flat", "Tricycle","Metric"];//Metric立体
 
-Solid.Earth.Vision.Flat
-    Isoic Isaac Iassic
-    Trikon
-    Rect
+Flat.EarthVisionSolid:Axis.Anaytical.Dot.Line.Angles&ReferedObjects
+Isoic Isaac Iassic
+Trikon
+Rect
 Flat.Earth.Solid
+
  Definite:TRC~CTR~RCT^Kaiter
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
@@ -96,8 +97,8 @@ Flat.Side~Caide
 Transcolor Bein-Transit Fortran Kolornize
     R G B Alpha
 
-Cyber= ["Separator", "Kinect", "Bracket"]
-    Cydia Cybrate
+Cyber= ["Separator", "Connector", "Bracket"]
+    Cydia Cybrate Kinect
 Lasik =letter symbol word
         Analytical.Dev.HardFirst.Symbol
 
