--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -18,7 +18,19 @@
     不愿意做人\\love-make the sound so-called invisible lifeform that people can not see is panic and paranoia 
      /^沾水踢扣 Genetical Virginal Grivitional Being Dragged Into 鬼儿自 钕耳龟
     希铀 妓肋十戒：轮回 苦 Transcolor.Religious.BuddlistChina
-
+1/3
+    Possess:
+        穿空间狗附体
+        农村小蛇抱怨 土？
+    Arrange(Possess)
+        仇家真进.洛克梅根.瑞博尔.区域性 真实性   
+            1）跟洛克梅根有关
+            2）没有直接关系,
+    EarthAge.Time->Dimention
+        bornt:8-10岁  2年,born 相差9-12 岁 然后 见面真人
+        middle:?传递index 做事
+        old:/^江山本
+    荆轲:Automatic.Rely
 </pre>
 </body>
 </html>
