--- a/AngelNetwork/analytical/cybers.html
+++ b/AngelNetwork/analytical/cybers.html
@@ -40,7 +40,7 @@
            //[length], [null],[ ['ket', 'start', 'end']],
            //[sot], [null],[ ['ket', 'start', 'end']]
             ];
-        Cybers[]
+        Cybers[0][1] = ""
         //document.write(Cybers[0][0]);
         //document.write(Cybers[0][1]);
 
