--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -30,7 +30,18 @@
         bornt:8-10岁  2年,born 相差9-12 岁 然后 见面真人
         middle:?传递index 做事
         old:/^江山本
-    荆轲:Automatic.Rely
+    关键.荆轲:Automatic.Rely
+1/5
+    Portal.Sensed.Get
+    Linkman.Example:BruceLeeKnown.Pastlife
+    关键.李自成.三角
+    关键.日本.RULE
+    关键.通讯
+        夏梦 耶稣 经络体
+    关键.李云龙:
+        国民&八路.罗列党地
+        维赛德 Facial
+        
 </pre>
 </body>
 </html>
