pointback stir-callback

--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -327,4 +327,14 @@ End
     BrainLike GroupPartial (cfs)
 拱主老牢 Water Kind Person Komingout
 Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
+今维的影响 与劝说
+    
+ Definition:PointBack.RangeFirst
+    美为标杆 催促反射镜 主要是着急点反
+    比如身高能1.85，却应为听讲人基因性质不好劝说，反性解说 
+        1.听讲人不知道
+        2.听讲人不好习惯性记忆
+        3.与听讲人有关或无关，但是对自己有利
+        4.对听讲人应该是有利
+
 -->
