--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -44,6 +44,8 @@
     伊兰特: HUOCHE亚过墙 鑫耗撵 商亥
     关键.不吃饭 哈拉哨 值肪 FAighT 沙慌饿~过 (走之为 辽昭也)
     Geo.OutSphere:瑞博尔 AT猫四肺儿
+    关键.细槽糙.捆氏兀.拱酮立蛹 WastCC FoodSleep 骨元素
+
 </pre>
 </body>
 </html>
