work object-extend

--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -34,8 +34,8 @@
 1/5
     Portal.Sensed.Get
     Linkman.Example:BruceLeeKnown.Pastlife
-    关键.李自成.三角
-    关键.日本.RULE
+    关键.李自成.三角 穿刺通信
+    关键.日本.RULE Predict
     关键.通讯
         夏梦 耶稣 经络体
     关键.李云龙:
@@ -45,7 +45,17 @@
     关键.不吃饭 哈拉哨 值肪 FAighT 沙慌饿~过 (走之为 辽昭也)
     Geo.OutSphere:瑞博尔 AT猫四肺儿
     关键.细槽糙.捆氏兀.拱酮立蛹 WastCC FoodSleep 骨元素
+    Joint.:美过 网锰 Anti-Beautiful Anti-Slow:FlyTriant
 
+    梦~仙维?->铀力器?=2次:煺 踹 磴 舞力器 条燥 Flea 
+    Finger 分割 掌管聋附芹  辛浆 5脍牵
+
+    成就感：三角族 把西方(色 文明三 Aztec.Maya.Inka 族球旗：磁欧石倾倒) 希腊圆 
+    埃及阴包
+     包?例子:金砖
+    女娲族
+        结绳记忆
+    冬/噩els/耗：Soldier.Captured.Uniform.ForcedWeared
 </pre>
 </body>
 </html>
