--- a/AngelNetwork/analytical/asnic/ketstruct.html
+++ b/AngelNetwork/analytical/asnic/ketstruct.html
@@ -3,26 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="../../models/constant.js"></script>
-    <script src="../../models/ket-struct.js"></script>
-    <script src="../../controllers/ket-extend.js"></script>
+    <script src="../../models/constant.js"></script> 
+    <script src="../../controllers/object-extend.js"></script>
+    <script src="../../controllers/string-extend.js"></script>
 </head>
 <body>
     <pre id="p">
   
 </pre>
     <script type="text/javascript">
-        "use strict";
-        let Typelect = {
-            assert: function (value) {
-                if (value == null) {
-                    const error = "[ERROR]Typelect.Assertion:value is null";
-                    document.write(error);
-                    throw error;
-                }
-            }
-        }
-
+    
         /**
          * @param object  
          *  function name * 1 
@@ -32,7 +22,7 @@
          */
         Object.prototype.reveal = function (object) {
             Typelect.assert(object);
-            var func = new Ketlecter();
+            var func = new StringBuilder();
             //string to be executed  in prototype string
             ketfunc.add(qta);
             ketfunc.add("abc eefb aaec d e f 1  234d2 334aar 4 8");
@@ -58,16 +48,7 @@
             list: [1, 2, 3, 4]
         };
         var o = {};
-        o.eval(null);
-
-        //Object.prototype.predicate = function (object) {
-        //    object(this);
-        //};
-
-        //Leonic.predicate(function (object) {
-        //    document.getElementById("p").innerHTML = object.list[2];
-        //});
-
+        o.reveal(null);
 
 
         let Transket = {
@@ -106,65 +87,3 @@
 
 </body>
 </html>
-<!--     //Tri
-        //Unicode.Language
-        //Transform.Solid.Kolor Random.ExtremEylex.Earthly^Rotate 
-        //Axis Odimentional think Directive.Left?.Matrix?.Right 转置
-        //IsOverride.Leonic
-        //Easy.JsonDev.ChangeDirective(Default=Direction.Left|Direction.Right)
-        //  bool:true, true:bool
-        //  Pi:3.14,3.14:PI
-        //Stringly^Converderation ketstart.word.letter(IncludeSBL) Glanced.Without \r   \n 
-        //  "bool", "不是 好锂"
-        //bool:"true",Number:"3.334"
-        //Unique.Combine 
-        //  "truebool" "num3.14" AsciiLetter:"603424 3.14" NeedConnector
-        let Leonic = {
-            //不能再用等于号放花括号类型first:={ what: “'yourname'},
-            //predicate: function (predicate) {
-            //    document.write(this.string);
-            //},
-            array: [1, 2, 3, 'd'],
-            string: "value2",
-            stringEach: 'a b c d',
-            boolean: true,
-            number: 98746123,
-            func1: [function () {
-                document.write("f5");
-            }, function () { },
-            ],
-            Funcks: [
-                ["l124-l80P0-END", "l124-l80:P0-END", "l124-l80:P0-END"],
-                ["l124-l80P0-END", "l124-l80:P0-END", "l124-l80:P0-END"],
-                ["l124-l80P0-END", "l124-l80:P3-END", "l124-l80:P0-END"],
-                ["l124-l80P0-END", "l124-l80:P0-END", "l124-l80:P0-END"],
-                ["l124-l80P0-END", "l124-l80:P0-END", "l124-l80:P0-END"],
-                ["l124-l80P0-END", "l124-l80:P0-END", "l124-l80:P0-END"],
-            ],
-            //RectanetX Metric^k^X RectangeIndex
-            //Subindex
-            'Func-1-Index:Ketstart:?Each&Space&': function () {
-                return
-                [
-                    'a b c d',
-                    'a b c d',
-                    'a b c d',
-                    ['asdf asdf  sad fa'],
-                    ['asasdf sad f'],
-                    ['asdf asdf asdf sad ffdas'],
-
-                    ["first", "sec", "thrd"],
-                    ["first", "sec", "thrd"],
-                    ["first", "sec", "thrd"],
-                ];
-                //line: 4
-                //pine:5
-                substyle:
-                [
-                    's-ed-len,abbr3-4?.5'
-                ]
-            },
-            Instance: function () {
-
-            }
-        }-->
