--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -336,5 +336,8 @@ Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
         2.听讲人不好习惯性记忆
         3.与听讲人有关或无关，但是对自己有利
         4.对听讲人应该是有利
-
+人内不忘儿氏脑亚，外头打忘，
+直串类型：
+    处男憋气端口：秘密，内斗，疼，冤枉
+    飞虎队通讯：语言 秘密
 -->
