--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -63,6 +63,26 @@ Left5: 1/8
         牢狼回超
         狼西安萍
     Lonic.Traceback
+
+    Ionic.Sumit
+        Analytical.Helpful
+            Slowly
+            Renily.Kontrol.Computer.Simulate->Water->Renliy->Sumit
+            Necessities of BORDER for leonic.simit
+                Hidden when required
+                1	1	1	1	1	1	B
+                1					/	C
+                1		*	*	*		1
+                1 --	*	X	*	-- 1
+                1		*	*	*		1
+                1	/					1
+                1	1	1	1	1	1	1
+            Recfine:Ask:
+                Source
+                Origin
+            Start from a pixel
+             LeoniKout
+    Sumit.Lonic
 </pre>
 </body>
 </html>
