--- a/AngelNetwork/analytical/analytical.html
+++ b/AngelNetwork/analytical/analytical.html
@@ -230,7 +230,12 @@ Renliy:Cando
     Let | Need | Required| 
     What Cannot
     无声明体不孤单 平淡无奇
-    
+Nint
+        Computer.Excel.Table.LeakBorder@Rotate
+        Pixal.Digts.Triangle.ScreenMonitor
+        多少显示器颗粒
+            放大或缩小Excel表格 占用了多少
+            Line:57X:Anuser.FrequentUsedSoftware&Screen&Pixel
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
