--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -84,8 +84,7 @@ Left5: 1/8
              LeoniKout
     Sumit.Lonic
 
-    关键:Jz1euz/hos-pity^cou-liqour-Transparency^CoCao++ 
-
+    关键:Jz1euz/hos-pity^cou-liqour-Transparency^CoCao++  
     drink.color:grape wisky tequilla wine
         habits:usual drink
             压惊：拉丁于&螺母 古代酒鬼信息
@@ -100,6 +99,36 @@ Left5: 1/8
         Gravity Xdown Tide 
         
     drink.disopaque.refer.serenity.html
+
+Left?!=4
+        Geolight*BrainRight
+        Geo?~Hellenic~Delic^K^ious\\@污粥.浊
+        参考：人类创造范围 Line106s： 
+        Loopback:Electric->Collision->Electronic-Semi
+            Liquid-Pxcel:
+            Car:Renliy.Steamoil~Mechanic-Semi-Digts.SoundSpeaker.Conduct
+        函数.人类创造范围：必备 基本 生活 工作 娱乐 防备抵御 //Not standout
+            人造人：
+                .女铝口人内娲 彩欧时 三晶角体结界 传送 端口?≈江山形成
+                索引：蔡培 蔡伦 Line:99x 西方同性恋
+            人造物：
+                发明与创造出 利用性
+                    性质 物理 不一样 积累性
+
+                技艺技术引导性 
+                发现实践性：火药 马镫 传送 从哪儿到哪儿               
+
+            地理：索来德形成出来 一个地方有的其他地方没有
+                    /^M&m/ 总体外形物质形状相同 但是内容不一样都有 地球区域技艺技术不同 
+                
+            语言？=维赛德
+                盅锅自：四兀 无主 兀术 线纸 星角 形别 水 
+                西欧字符：
+
+        追溯..分析.关键词：限制创造性 //Lonic.Traceback.Standout
+
+
+
 </pre>
 </body>
 </html>
