--- a/AngelNetwork/analytical/analytical.html
+++ b/AngelNetwork/analytical/analytical.html
@@ -25,7 +25,7 @@ Prioity
                 Rant 
                 Rint
         Infort:
-
+         
 Implused
     Categorizd:
         AI dump to APP
@@ -236,6 +236,17 @@ Nint
         多少显示器颗粒
             放大或缩小Excel表格 占用了多少
             Line:57X:Anuser.FrequentUsedSoftware&Screen&Pixel
+Sumit.Flat
+        自身Rotate
+        齿儿把手 放 公式
+        标杆 词性 3SC Stickstackstabledcolored
+        容3 边角分
+        隙缝 3.14
+        PineEach
+        Axis.angle
+        Axis.center.inside
+        Axis.center.outside
+
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
