sumit index-explain

--- a/AngelNetwork/analytical/analytical.html
+++ b/AngelNetwork/analytical/analytical.html
@@ -227,7 +227,7 @@ Vesaier
         Harress sexcully 鬼ly
 Renliy:Cando
     人 洛克梅根 维金美
-    Let | Need | Required| 
+     Required| Not|Rand
     What Cannot
     无声明体不孤单 平淡无奇
 Nint
@@ -236,7 +236,26 @@ Nint
         多少显示器颗粒
             放大或缩小Excel表格 占用了多少
             Line:57X:Anuser.FrequentUsedSoftware&Screen&Pixel
-Sumit.Flat
+
+Sumit.Lonic
+        Analytical.Helpful
+        Slowly
+        Renily.Kontrol.Computer.Simulate->Water->Renliy->Sumit
+        Necessities of BORDER for leonic.simit
+            Hidden when required
+            1	1	1	1	1	1	B
+            1					/	C
+            1		*	*	*		1
+            1 --	*	X	*	-- 1
+            1		*	*	*		1
+            1	/					1
+            1	1	1	1	1	1	1
+        Recfine:Ask:
+            Source
+            Origin
+        Start from a pixel
+            LeoniKout
+ 
         自身Rotate
         齿儿把手 放 公式
         标杆 词性 3SC Stickstackstabledcolored
@@ -244,9 +263,8 @@ Sumit.Flat
         隙缝 3.14
         PineEach
         Axis.angle
-        Axis.center.inside
-        Axis.center.outside
-
+        Axis.center.inside&outside:border&kolor
+End
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
