--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -64,25 +64,7 @@ Left5: 1/8
         狼西安萍
     Lonic.Traceback
 
-    Ionic.Sumit
-        Analytical.Helpful
-            Slowly
-            Renily.Kontrol.Computer.Simulate->Water->Renliy->Sumit
-            Necessities of BORDER for leonic.simit
-                Hidden when required
-                1	1	1	1	1	1	B
-                1					/	C
-                1		*	*	*		1
-                1 --	*	X	*	-- 1
-                1		*	*	*		1
-                1	/					1
-                1	1	1	1	1	1	1
-            Recfine:Ask:
-                Source
-                Origin
-            Start from a pixel
-             LeoniKout
-    Sumit.Lonic
+
 
     关键:Jz1euz/hos-pity^cou-liqour-Transparency^CoCao++  
     drink.color:grape wisky tequilla wine
@@ -107,6 +89,7 @@ Left?!=4
         Loopback:Electric->Collision->Electronic-Semi
             Liquid-Pxcel:
             Car:Renliy.Steamoil~Mechanic-Semi-Digts.SoundSpeaker.Conduct
+
         函数.人类创造范围：必备 基本 生活 工作 娱乐 防备抵御 //Not standout
             人造人：
                 .女铝口人内娲 彩欧时 三晶角体结界 传送 端口?≈江山形成
@@ -127,8 +110,15 @@ Left?!=4
 
         追溯..分析.关键词：限制创造性 //Lonic.Traceback.Standout
 
+     函数.打忘后经验获取    
+         解释：索引-牵连 \\RenliyIndex-LeonIndex-RockmegaIndex       
+     
+        关键词：*人类.忽略 ：人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到相关：事件 时间 地点 人物 
+        生命体 声明体 刚体 关联 比重
+         相互关系：人 莱昂 洛克梅根（标量影响 ) 
+         范围：最近 最远 莱昂尼克 \\Handle.Left|Right Metricwhich
 
-
+     结束.罗塞塔旋转
 </pre>
 </body>
 </html>
