re^cent 3-4 pillar snake tube off quick

--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -108,17 +108,29 @@ Left?!=4
                 盅锅自：四兀 无主 兀术 线纸 星角 形别 水 
                 西欧字符：
 
-        追溯..分析.关键词：限制创造性 //Lonic.Traceback.Standout
+     追溯..分析.关键词：限制创造性 //Lonic.Traceback.Standout
 
-     函数.打忘后经验获取    
-         解释：索引-牵连 \\RenliyIndex-LeonIndex-RockmegaIndex       
-     
-        关键词：*人类.忽略 ：人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到相关：事件 时间 地点 人物 
+    解释：索引-牵连 \\RenliyIndex-LeonIndex-RockmegaIndex   
+        关键词：*人类.忽略  
+            1 人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到
+            2 相关：事件 时间 地点 人物 
+            3 名声以外
+     人头索引 地球 东 中 西
+        一个人点面另外一个国家或区域人
+
+     函数.打忘后经验获取         
+
         生命体 声明体 刚体 关联 比重
          相互关系：人 莱昂 洛克梅根（标量影响 ) 
          范围：最近 最远 莱昂尼克 \\Handle.Left|Right Metricwhich
 
      结束.罗塞塔旋转
+    形态体
+    牛群
+     荆轲
+     Geo
+    日//                                                Trashuman
+
 </pre>
 </body>
 </html>
