--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -341,5 +341,6 @@ Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
     处男憋气端口：秘密，内斗，疼，冤枉
     飞虎队通讯：语言 秘密
 吃饭没味道
-    弧牵？：外牵引
+    弧牵？：外牵
+陈婷罪（天倒过来 菱形?评测:Virgin|Sex-sky）
 -->
