--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -115,6 +115,14 @@ Left?!=4
             1 人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到
             2 相关：事件 时间 地点 人物 
             3 名声以外
+            4 解释  
+                H：人 
+                L：人看不见的空间生命体
+                P:附体提到哪些人
+            Index.Triangle:
+                   H
+                  /   \
+                L       P
      人头索引 地球 东 中 西
         一个人点面另外一个国家或区域人
 
@@ -125,12 +133,23 @@ Left?!=4
          范围：最近 最远 莱昂尼克 \\Handle.Left|Right Metricwhich
 
      结束.罗塞塔旋转
-    形态体
-    牛群
-     荆轲
-     Geo
-    日//                                                Trashuman
+  
+Left 2-O-5?!= 30 Date:1/10
+    软硬见尸：水性电砖贡辆靓
+    Reason: Projection Use  Absorb:InsideEarth~Outsphere
 
+    函数：气层内外.形态体
+        索来德 ：软 维赛德：硬  
+        美为本 人为准 美为本 水为准 //Baeutify  Butterfly
+        
+        兀^术菱Lz之 Lack.hard
+        牛群 Lacof:Soft.ButRabbered
+        荆轲 L?.LightOut
+        Geo Lacof:Delicacy
+        日//Trashuman
+    追溯.理序
+
+    
 </pre>
 </body>
 </html>
